crates/service/tests/hover/snapshots/features__hover__param_via_type_def.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(param f32)\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 15
    },
    "end": {
      "line": 4,
      "character": 16
    }
  }
}
