crates/service/tests/hover/snapshots/features__hover__ref_test_with_null_ref.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nref.test\n```\nBinary Opcode: 0xFB 0x15"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 4
    },
    "end": {
      "line": 3,
      "character": 12
    }
  }
}
