crates/service/tests/hover/snapshots/features__hover__select_with_result.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nselect\n```\nBinary Opcode: 0x1C"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 9
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
