crates/service/tests/hover/snapshots/features__hover__struct_type_empty.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(type $struct (struct))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 20
    },
    "end": {
      "line": 3,
      "character": 27
    }
  }
}
