crates/service/tests/hover/snapshots/features__hover__table_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(table $x 1 (ref null func))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 15
    },
    "end": {
      "line": 3,
      "character": 17
    }
  }
}
